# agent-template

./: COMO_USAR_TEMPLATE.md  EXEMPLO_USO.md  README.md  cookiecutter.json  promt.md  quick_demo.sh  test_template.py
{{cookiecutter.project_slug}}/: .gitignore  .python-version  Dockerfile  ENV_VARS.md  README.md  docker-compose.yml  main.py  pyproject.toml
{{cookiecutter.project_slug}}/app/: __init__.py
{{cookiecutter.project_slug}}/app/application/: __init__.py
{{cookiecutter.project_slug}}/app/application/agent/: __init__.py
{{cookiecutter.project_slug}}/app/application/agent/{{cookiecutter.agent_name}}/: __init__.py
{{cookiecutter.project_slug}}/app/application/agent/{{cookiecutter.agent_name}}/agent_builder/: __init__.py  decision_router.py  {{cookiecutter.agent_builder_name}}.py  {{cookiecutter.agent_name}}_agent_builder.py
{{cookiecutter.project_slug}}/app/application/agent/{{cookiecutter.agent_name}}/node_functions/: __init__.py
{{cookiecutter.project_slug}}/app/application/agent/{{cookiecutter.agent_name}}/node_functions/adjust_{{cookiecutter.agent_name}}_node/: __init__.py  node.py
{{cookiecutter.project_slug}}/app/application/agent/{{cookiecutter.agent_name}}/node_functions/reflect_node/: __init__.py  node.py
{{cookiecutter.project_slug}}/app/application/agent/{{cookiecutter.agent_name}}/node_functions/{{cookiecutter.agent_name}}_node/: __init__.py  node.py
{{cookiecutter.project_slug}}/app/application/interfaces/: __init__.py  illm_service.py
{{cookiecutter.project_slug}}/app/application/services/: __init__.py  {{cookiecutter.agent_name}}_service.py  {{cookiecutter.service_name}}_service.py
{{cookiecutter.project_slug}}/app/domain/: __init__.py
{{cookiecutter.project_slug}}/app/domain/entities/: {{cookiecutter.agent_name}}_output.py  {{cookiecutter.domain_name}}.py
{{cookiecutter.project_slug}}/app/domain/state/: {{cookiecutter.agent_name}}_state.py
{{cookiecutter.project_slug}}/app/infrastructure/: __init__.py
{{cookiecutter.project_slug}}/app/infrastructure/config/: config.py
{{cookiecutter.project_slug}}/app/infrastructure/llm/: llm_factory.py  openai_service.py
{{cookiecutter.project_slug}}/app/presentation/: __init__.py  {{cookiecutter.agent_name}}_router.py  {{cookiecutter.domain_name}}_router.py
(+3 files in other folders)
